--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   firebase_core: ^3.14.0
   cloud_firestore: ^5.6.9
   firebase_auth: ^5.6.0
+  google_sign_in: ^6.2.1
   # Utils
   uuid: ^4.5.1
   equatable: ^2.0.7
