--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ lib/firebase_options.dart
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 macos/Runner/GoogleService-Info.plist
+/firebase.json
