--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   uuid: ^4.5.1
   equatable: ^2.0.7
   intl: ^0.19.0
+  # Logging
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -44,3 +46,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
